tweaked some formatting and fixed css to work on firefox

--- a/style.css
+++ b/style.css
@@ -1,15 +1,24 @@
 html {
-    background: url("portrait.jpg") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
     padding: 0px;
+    height: 100%;
 }
 
 body {
     margin: 0px;
     padding: 0px;
+    height: 100%;
+    background: url("portrait.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+div.page_contents{
+    position: relative;
+    min-height: 100%;
+    margin-bottom: -80px;
+    background-filter: blur(3px);
 }
 
 div.header {
@@ -21,16 +30,9 @@ div.header {
    font-family: 'Raleway', sans-serif;
 }
 
-div.page_contents{
-    position: relative;
-    min-height: 100%;
-    margin-bottom: -80px;
-}
-
 div.container {
     position: absolute;
     top: 50%;
-    height: 30%;
     width: 100%;
     transform: translateY(-50%);    
 }
